--- a/assets/css/001.css
+++ b/assets/css/001.css
@@ -1,4 +1,38 @@
+@import 'https://fonts.googleapis.com/css?family=Prompt';
 
-.backgound {
-    
+body {
+    background-image: url('../images/background1.png');
+    background-size: cover;
+    min-height: 800px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Prompt';
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%; 
+    text-align: center;
+}
+
+.homebutton{
+    min-height: 100%;
+    min-width: 100%;
+    align-items: center;
+}
+
+.home-button {    
+    font-family: 'Prompt';
+    font-size: 18pt;
+    width: 250px;
+    min-height: 50px;
+    color: #79D9D5;
+    background-color: #fff;
+    border-color: #79D9D5;
+    border-width: 3px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
